clothinglang.output
Terminals unused in grammar

    NUMBER


Grammar

    0 $accept: program $end

    1 program: ε
    2        | program unit

    3 $@1: ε

    4 unit: CREATE PECA_TYPE STRING '{' $@1 attr_tec attr_cor attr_tam '}' processes

    5 attr_tec: TECIDO_KW '=' TECIDO_VAL ';'

    6 attr_cor: COR_KW '=' COR_VAL ';'

    7 attr_tam: TAMANHO_KW '=' TAMANHO_VAL ';'

    8 processes: ε
    9          | processes process

   10 process: CORTAR IDENTIFIER EM IDENTIFIER ';'
   11        | COSTURAR IDENTIFIER ';'
   12        | AJUSTAR IDENTIFIER PARA TAMANHO_VAL ';'
   13        | FINALIZAR IDENTIFIER ';'


Terminals, with rules where they appear

    $end (0) 0
    ';' (59) 5 6 7 10 11 12 13
    '=' (61) 5 6 7
    '{' (123) 4
    '}' (125) 4
    error (256)
    PECA_TYPE <str> (258) 4
    STRING <str> (259) 4
    IDENTIFIER <str> (260) 10 11 12 13
    TECIDO_VAL <str> (261) 5
    COR_VAL <str> (262) 6
    TAMANHO_VAL <str> (263) 7 12
    CREATE (264) 4
    TECIDO_KW (265) 5
    COR_KW (266) 6
    TAMANHO_KW (267) 7
    CORTAR (268) 10
    COSTURAR (269) 11
    AJUSTAR (270) 12
    FINALIZAR (271) 13
    EM (272) 10
    PARA (273) 12
    NUMBER <num> (274)


Nonterminals, with rules where they appear

    $accept (24)
        on left: 0
    program (25)
        on left: 1 2
        on right: 0 2
    unit (26)
        on left: 4
        on right: 2
    $@1 (27)
        on left: 3
        on right: 4
    attr_tec (28)
        on left: 5
        on right: 4
    attr_cor (29)
        on left: 6
        on right: 4
    attr_tam (30)
        on left: 7
        on right: 4
    processes (31)
        on left: 8 9
        on right: 4 9
    process (32)
        on left: 10 11 12 13
        on right: 9


State 0

    0 $accept: • program $end

    $default  reduce using rule 1 (program)

    program  go to state 1


State 1

    0 $accept: program • $end
    2 program: program • unit

    $end    shift, and go to state 2
    CREATE  shift, and go to state 3

    unit  go to state 4


State 2

    0 $accept: program $end •

    $default  accept


State 3

    4 unit: CREATE • PECA_TYPE STRING '{' $@1 attr_tec attr_cor attr_tam '}' processes

    PECA_TYPE  shift, and go to state 5


State 4

    2 program: program unit •

    $default  reduce using rule 2 (program)


State 5

    4 unit: CREATE PECA_TYPE • STRING '{' $@1 attr_tec attr_cor attr_tam '}' processes

    STRING  shift, and go to state 6


State 6

    4 unit: CREATE PECA_TYPE STRING • '{' $@1 attr_tec attr_cor attr_tam '}' processes

    '{'  shift, and go to state 7


State 7

    4 unit: CREATE PECA_TYPE STRING '{' • $@1 attr_tec attr_cor attr_tam '}' processes

    $default  reduce using rule 3 ($@1)

    $@1  go to state 8


State 8

    4 unit: CREATE PECA_TYPE STRING '{' $@1 • attr_tec attr_cor attr_tam '}' processes

    TECIDO_KW  shift, and go to state 9

    attr_tec  go to state 10


State 9

    5 attr_tec: TECIDO_KW • '=' TECIDO_VAL ';'

    '='  shift, and go to state 11


State 10

    4 unit: CREATE PECA_TYPE STRING '{' $@1 attr_tec • attr_cor attr_tam '}' processes

    COR_KW  shift, and go to state 12

    attr_cor  go to state 13


State 11

    5 attr_tec: TECIDO_KW '=' • TECIDO_VAL ';'

    TECIDO_VAL  shift, and go to state 14


State 12

    6 attr_cor: COR_KW • '=' COR_VAL ';'

    '='  shift, and go to state 15


State 13

    4 unit: CREATE PECA_TYPE STRING '{' $@1 attr_tec attr_cor • attr_tam '}' processes

    TAMANHO_KW  shift, and go to state 16

    attr_tam  go to state 17


State 14

    5 attr_tec: TECIDO_KW '=' TECIDO_VAL • ';'

    ';'  shift, and go to state 18


State 15

    6 attr_cor: COR_KW '=' • COR_VAL ';'

    COR_VAL  shift, and go to state 19


State 16

    7 attr_tam: TAMANHO_KW • '=' TAMANHO_VAL ';'

    '='  shift, and go to state 20


State 17

    4 unit: CREATE PECA_TYPE STRING '{' $@1 attr_tec attr_cor attr_tam • '}' processes

    '}'  shift, and go to state 21


State 18

    5 attr_tec: TECIDO_KW '=' TECIDO_VAL ';' •

    $default  reduce using rule 5 (attr_tec)


State 19

    6 attr_cor: COR_KW '=' COR_VAL • ';'

    ';'  shift, and go to state 22


State 20

    7 attr_tam: TAMANHO_KW '=' • TAMANHO_VAL ';'

    TAMANHO_VAL  shift, and go to state 23


State 21

    4 unit: CREATE PECA_TYPE STRING '{' $@1 attr_tec attr_cor attr_tam '}' • processes

    $default  reduce using rule 8 (processes)

    processes  go to state 24


State 22

    6 attr_cor: COR_KW '=' COR_VAL ';' •

    $default  reduce using rule 6 (attr_cor)


State 23

    7 attr_tam: TAMANHO_KW '=' TAMANHO_VAL • ';'

    ';'  shift, and go to state 25


State 24

    4 unit: CREATE PECA_TYPE STRING '{' $@1 attr_tec attr_cor attr_tam '}' processes •
    9 processes: processes • process

    CORTAR     shift, and go to state 26
    COSTURAR   shift, and go to state 27
    AJUSTAR    shift, and go to state 28
    FINALIZAR  shift, and go to state 29

    $default  reduce using rule 4 (unit)

    process  go to state 30


State 25

    7 attr_tam: TAMANHO_KW '=' TAMANHO_VAL ';' •

    $default  reduce using rule 7 (attr_tam)


State 26

   10 process: CORTAR • IDENTIFIER EM IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 31


State 27

   11 process: COSTURAR • IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 32


State 28

   12 process: AJUSTAR • IDENTIFIER PARA TAMANHO_VAL ';'

    IDENTIFIER  shift, and go to state 33


State 29

   13 process: FINALIZAR • IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 34


State 30

    9 processes: processes process •

    $default  reduce using rule 9 (processes)


State 31

   10 process: CORTAR IDENTIFIER • EM IDENTIFIER ';'

    EM  shift, and go to state 35


State 32

   11 process: COSTURAR IDENTIFIER • ';'

    ';'  shift, and go to state 36


State 33

   12 process: AJUSTAR IDENTIFIER • PARA TAMANHO_VAL ';'

    PARA  shift, and go to state 37


State 34

   13 process: FINALIZAR IDENTIFIER • ';'

    ';'  shift, and go to state 38


State 35

   10 process: CORTAR IDENTIFIER EM • IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 39


State 36

   11 process: COSTURAR IDENTIFIER ';' •

    $default  reduce using rule 11 (process)


State 37

   12 process: AJUSTAR IDENTIFIER PARA • TAMANHO_VAL ';'

    TAMANHO_VAL  shift, and go to state 40


State 38

   13 process: FINALIZAR IDENTIFIER ';' •

    $default  reduce using rule 13 (process)


State 39

   10 process: CORTAR IDENTIFIER EM IDENTIFIER • ';'

    ';'  shift, and go to state 41


State 40

   12 process: AJUSTAR IDENTIFIER PARA TAMANHO_VAL • ';'

    ';'  shift, and go to state 42


State 41

   10 process: CORTAR IDENTIFIER EM IDENTIFIER ';' •

    $default  reduce using rule 10 (process)


State 42

   12 process: AJUSTAR IDENTIFIER PARA TAMANHO_VAL ';' •

    $default  reduce using rule 12 (process)
